# Agentic-HomeLab

./: CHAIN_OF_THOUGHT_PLAN.md  CLAUDE.md  EMAIL_ASSISTANT_ENHANCEMENT_PLAN.md  EMAIL_WORKFLOW_FIXES_SUMMARY.md  EMBEDDING_MANAGEMENT_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  PHASE_3_UI_ENHANCEMENTS.md  TESTING_CHAIN_OF_THOUGHT.md
Agentic-Backend/: .env.example.detailed  .gitignore  API_DOCUMENTATION.md  API_FIXES_NEEDED.md  API_FIXES_PROJECT_PLAN.md  Dockerfile  EMAIL_WORKFLOW_GETTINGSTARTED_GUIDE.md  README.md  ROUTE_DESIGN_PATTERNS.md  STARTUP_GUIDE.md  TROUBLESHOOTING.md  USER_SETUP.md  WORKFLOW_DEVELOPMENT_GUIDE.md  alembic.ini  chat_session_embedding_improvements.txt  check_embeddings.py  check_test_email.py  debug_sync_state.py  docker-compose.yml  pyproject.toml  requirements.txt  setup-ssl.sh  test_embedding_queue.py  test_health_endpoint.py  test_sync_robustness.py  trigger_sync.py
Agentic-Backend/alembic/: env.py
Agentic-Backend/app/: celery_app.py  config.py  main.py
Agentic-Backend/examples/: EmailWorkflowDashboard.css  EmailWorkflowDashboard.jsx  README.md  email_analyzer_agent.json  email_workflow_api_example.py
Agentic-Backend/frontend/: index.html  package.json  vite.config.ts
Agentic-Backend/nginx/: nginx.conf
Agentic-Backend/scripts/: change_password.py  check_db.py  check_embedding_status.py  check_users.py  create_user.py  debug_recent_flight_emails.py  debug_san_diego_search.py  generate_email_embeddings.py  init_db.py  run_worker.py  setup_database.py  test_phase1_implementations.py
Agentic-Backend/tests/: test_secrets.py  (+10 more)
(+358 files in other folders)
